<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/col1_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/diet_schedule_count_tools_text" />

    <TextView
        android:id="@+id/col2_textView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_horizontal"
        android:text="@string/diet_schedule_col2_tools_text"
        app:layout_constraintStart_toEndOf="@+id/col1_textView"
        app:layout_constraintTop_toTopOf="@+id/col1_textView" />

    <TextView
        android:id="@+id/col3_textView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_horizontal"
        android:text="@string/diet_schedule_col3_tools_text"
        app:layout_constraintStart_toEndOf="@+id/col2_textView"
        app:layout_constraintTop_toTopOf="@+id/col2_textView" />

    <TextView
        android:id="@+id/col4_textView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_horizontal"
        android:text="@string/diet_schedule_col4_tools_text"
        app:layout_constraintStart_toEndOf="@+id/col3_textView"
        app:layout_constraintTop_toTopOf="@+id/col3_textView" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_item_line"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>