<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.patient.PatientHome">

    <!-- TODO: Update blank fragment layout -->
    <data>
        <variable
            name="patient"
            type="com.appside.losefatsquick.view.patient.PatientHome" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_baseline_image_24"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView7"
                    style="@style/title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@={patient.viewModel.patient.name}"
                    tools:text="@string/patient_name_tool_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_profile_weight" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.weight}"
                        tools:text="@string/patient_actual_weight_tool_text" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:text="@string/patients_height_description_text" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.height}"
                        tools:text="@string/patient_height_tool_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_profile_start_date" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|end"
                        android:text="@={patient.viewModel.patient.startedDate}"
                        tools:text="@string/patient_profile_date_tools_text" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={patient.viewModel.patient.IMC}"
                    app:layout_constraintEnd_toEndOf="@+id/textView27"
                    app:layout_constraintStart_toStartOf="@+id/textView27"
                    app:layout_constraintTop_toBottomOf="@+id/textView27"
                    tools:text="@string/patient_last_weight_tool_text" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:text="@string/patient_profile_imc_description_text"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={patient.viewModel.patient.calories}"
                    app:layout_constraintEnd_toEndOf="@+id/textView25"
                    app:layout_constraintStart_toStartOf="@+id/textView25"
                    app:layout_constraintTop_toBottomOf="@+id/textView25"
                    tools:text="@string/patient_last_weight_tool_text" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/patient_profile_lost_calories_description_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/ic_baseline_image_24"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.actualDiet}"
                        tools:text="@string/patient_profile_diet_tools_text" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_profile_weekly_menu_description_text" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dietRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp">

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:onClick="@{() -> patient.goToNextView()}"
                android:rotationY="180"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/colorSecondary" />
        </LinearLayout>
    </ScrollView>
</layout>