<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.admin.PatientProfile">
    <data>
        <variable name="patient" type="com.appside.losefatsquick.view.admin.PatientProfile"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/divider_item_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patients_actual_weight_textView" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/patients_picture_imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/patient_description_image_text"
                app:srcCompat="@drawable/ic_baseline_image_24"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/patients_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@={patient.viewModel.patient.name}"
                    tools:text="@string/patient_name_tool_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patients_age_description_text" />

                    <TextView
                        android:id="@+id/patients_age_textView"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.age}"
                        tools:text="@string/patient_age_tool_text" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:text="@string/patients_height_description_text" />

                    <TextView
                        android:id="@+id/patient_height_textView"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.height}"
                        tools:text="@string/patient_height_tool_text" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patients_time_description_text" />

                    <TextView
                        android:id="@+id/patient_time_textView"
                        style="@style/patient_info_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={patient.viewModel.patient.time}"
                        tools:text="@string/patients_time_tool_text" />


                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView14"
            style="@style/patients_weigages_description_style"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/patients_last_weight_description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_info_layout" />

        <TextView
            android:id="@+id/patients_last_weight_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:text="@={patient.viewModel.patient.lastWeight}"
            tools:text="@string/patient_last_weight_tool_text" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/divider_item_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patients_last_weight_textView" />

        <TextView
            android:id="@+id/textView17"
            style="@style/patients_weigages_description_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/patients_actual_weight_description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/patients_actual_weight_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:text="@={patient.viewModel.patient.actualWeight}"
            tools:text="@string/patient_actual_weight_tool_text" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/patients_lost_weight_result_description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/weight_difference_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:text="@={patient.viewModel.patient.weightDifference}"
            tools:text="@string/patient_difference_weight_tool_text" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/patients_pictures_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/patient_button_confirm_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView3"
            style="@style/patients_images_style"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/patients_images_content_description_text"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:src="@tools:sample/avatars"
            app:srcCompat="@drawable/ic_baseline_image_24"
            />

        <ImageView
            android:id="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:contentDescription="@string/patients_images_content_description_text"
            tools:src="@tools:sample/avatars"
            app:srcCompat="@drawable/ic_baseline_image_24"
            style="@style/patients_images_style" />

        <ImageView
            android:id="@+id/imageView5"
            style="@style/patients_images_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView6"
            style="@style/patients_images_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView7"
            style="@style/patients_images_style"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView8"
            style="@style/patients_images_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView9"
            style="@style/patients_images_style"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView10"
            style="@style/patients_images_style"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView11"
            style="@style/patients_images_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            android:contentDescription="@string/patients_images_content_description_text"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>